# Proyecto2_Arqui2-shared_memory

./: .gitignore  CMakeLists.txt  PE.cpp  PE.h  all_in_one.sh  bus.cpp  bus.h  cache.cpp  cache.h  codigo.txt  ls.meson.build.ls  main.cpp  mainwindow.cpp  mainwindow.h  shared_memory.cpp  shared_memory.h  testPE.cpp
